HMAN-1024: Added null ErrorDetails check to AuthenticationException handling
Changed handleAuthenticationException() in PendingRequestServiceImpl to check whether the ErrorDetails object extracted from the exception is null.  This should never happen with the other changes that have been made, but adding it as a precaution.

Added tests to PendingRequestServiceImplIT and PendingRequestServiceImplTest for situation where AuthenticationException ErrorDetails object is null or empty (i.e. the ErrorDetails object is not null, but all of its fields are).

Added DisplayName annotation to parameterised tests that specify a name format.  This is just to make the tests easier to identify in the test results report.

Removed ExtendWith(SpringExtension.class) annotation from FutureHearingRepositoryIT.  This is inherited from SpringBootTest annotation in BaseTest class so isn't needed here.